# Cellkin

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
src/cellkin/: build_nj.py  clone_phylogeny.py  extract_chrM.py  genotype.py  io_utils.py  nj_prep.py  qc_report.py  umi_pileup.py  variant_call.py
tests/: test_build_nj.py  test_clone_phylogeny.py  test_extract_chrm_whitelist.py  test_genotype.py  test_nj_prep.py  test_umi_pileup.py  test_variant_call.py
tests/benchmarks/: benchmark_pipeline.py
