[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellkin"
version = "0.0.0.9000"
description = "Reconstruct clonal structure and lineage trees from mitochondrial sequence variation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "pysam>=0.22",
  "pandas>=2.0",
  "numpy>=1.24",
  "pyarrow>=14.0",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "networkx>=3.1",
  "statsmodels>=0.14",
]

[project.scripts]
cellkin-extract-chrm = "cellkin.extract_chrM:main"
cellkin-umi-pileup = "cellkin.umi_pileup:main"
cellkin-variant-call = "cellkin.variant_call:main"
cellkin-genotype = "cellkin.genotype:main"
cellkin-clone-phylogeny = "cellkin.clone_phylogeny:main"
cellkin-build-nj = "cellkin.build_nj:main"
cellkin-nj-prep = "cellkin.nj_prep:main"
cellkin-qc-report = "cellkin.qc_report:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
